Move lodash plugin to the main module.